# Image-Recognition-For-Autonomous-Vehicles

./: .replit  README.md  pyproject.toml  requirements.txt  setup.py  template.py  test.py
src/: exception.py  logger.py
src/CNNproject/: __init__.py
