[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
matplotlib = "^3.5.2"
pandas = "^1.4.2"
torch = "^1.11.0"
jax = "^0.3.13"
tensorflow = "2.8.0"
transformers = "^4.20.1"

[tool.poetry.dev-dependencies]
python-lsp-server = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"